<resources>
    <string name="app_name" translatable="false">ZHMS</string>
    <string name="app_name1" translatable="false">ZENTECH HOTEL MANAGEMENT SYSTEM</string>
    <string name="application_name" translatable="false">ZHMS</string>
    <string name="application_name_1" translatable="false">ZENTECH HOTEL MANAGEMENT SYSTEM</string>
    <string name="hint_email" translatable="false">Email</string>
    <string name="hint_password" translatable="false">Password</string>
    <string name="hint_location" translatable="false">Location/Address</string>
    <string name="hint_address" translatable="false">Address</string>
    <string name="hint_city" translatable="false">City</string>
    <string name="hint_campus" translatable="false">Campus</string>
    <string name="hint_tel" translatable="false">Mob. Number</string>
    <string name="hint_phone" translatable="false">Phone Number</string>
    <string name="hint_momo_number" translatable="false">Momo Number</string>
    <string name="hint_username" translatable="false">Username</string>
    <string name="link_reset_password" translatable="false">Forgot Password?</string>
    <string name="text_gender" translatable="false">Gender</string>
    <string name="add_rooms" translatable="false">Add Rooms</string>
    <string name="room_added_successful" translatable="false">Room Added Successfully</string>
    <string name="add_rooms_sub_text" translatable="false">add rooms available to the system</string>
    <string name="delete_rooms" translatable="false">Delete Rooms</string>
    <string name="delete_rooms_sub_text" translatable="false">delete rooms which are not needed</string>
    <string name="manage_rooms" translatable="false">Manage Rooms</string>
    <string name="manage_rooms_sub_text" translatable="false">you can manage all rooms available here!</string>
    <string name="manage_users" translatable="false">Manage Users</string>
    <string name="manage_users_sub_text" translatable="false">manage users available? See here!</string>
    <string name="reset_password" translatable="false">Reset Password</string>
    <string name="reset_password_sub_text" translatable="false">Noticed any unauthorised access? then reset pass</string>
    <string name="edit_credentials" translatable="false">Edit Credentials</string>
    <string name="edit_credentials_sub_text" translatable="false">lets edit your credentials if necessary</string>
    <string name="check_payments" translatable="false">Check Payments</string>
    <string name="check_payment_sub_text" translatable="false">check payments made by users</string>
    <string name="logout_sub_text" translatable="false">done? lets exit the system</string>
    <string name="admin_dash_board" translatable="false">ADMIN DASHBOARD</string>
    <string name="about_us_title" translatable="false">About Us</string>
    <string name="title_who_we_are" translatable="false">WHO WE ARE</string>
    <string name="about_us_sub_title" translatable="false">
        ZENTECH HMS is a mobile application specification android,
        developed by iCODE Labs to help this guest house keep with its management.
        ZENTECH I.T SOLUTIONS was established in the year 2012  but undertook the development
        of mobile application for Hotels or Guest houses in need. It consists of
        professional android developers from campuses across the country.Below is our contact information:
        Mob. : +233.302.26.86.50, +233.302.98.50.13, +233.50.130.4161.
        Email: info@zentechgh.com
        Location: located at Accra, 2nd floor Tesano Commercial Plaza.
        Thank you for using this application.
    </string>
    <string name="error_empty_email" translatable="false">Email field cannot be left empty</string>
    <string name="error_empty_password" translatable="false">Password field cannot be left empty</string>
    <string name="email_invalid" translatable="false">Enter a valid email address</string>
    <string name="email_registered" translatable="false">Enter your registered email id</string>
    <string name="error_password_length" translatable="false">Password length cannot be less than 6</string>
    <string name="error_empty_phone" translatable="false">Phone Number field cannot be left empty</string>
    <string name="error_empty_momo_number" translatable="false">Mobile Money Number is a required field</string>
    <string name="phone_invalid" translatable="false">Enter a valid phone number</string>
    <string name="sign_up_successful" translatable="false">Sign Up Successful</string>
    <string name="login_successful" translatable="false">Login Successful</string>
    <string name="error_empty_field" translatable="false">Field cannot left empty</string>
    <string name="error_empty_username" translatable="false">Username is a required field</string>
    <string name="error_text_hostel" translatable="false">Enter your hostel name to better locate you</string>
    <string name="error_text_room_number" translatable="false">This field cannot be left empty"</string>
    <string name="error_empty_price" translatable="false">This field cannot be left empty</string>
    <string name="error_text_phone_number" translatable="false">Telephone number is a required field</string>
    <string name="error_adding_room" translatable="false">Please Select Room Image from gallery</string>
    <string name="no_rooms_added" translatable="false">
        No Rooms added yet
    </string>
    <string name="no_users_added" translatable="false">
        No Users available yet
    </string>
    <string name="no_payment_made" translatable="false">
        No Payments made yet
    </string>
    <string name="text_uploading_details" translatable="false">Uploading Details</string>
    <string name="text_please_wait" translatable="false">please wait...</string>
    <string name="instruct_reset_password" translatable="false">
        "We have sent you instructions to reset your password!"</string>
    <string name="text_about" translatable="false">About Us</string>
    <string name="text_contact" translatable="false">Contact Us</string>
    <string name="text_search" translatable="false">Search</string>
    <string name="text_search_room_type" translatable="false">search for room types</string>
    <string name="search" translatable="false">search</string>
    <string name="text_sign_out" translatable="false">Sign out</string>
    <string name="text_exit" translatable="false">Exit</string>
    <string name="text_about_us" translatable="false">
        ZENTECH HMS is a unique mobile application
        developed to help clients or users to easily book hotel
        rooms and make payments instantly through any mobile
        money payment platform and Credit or Debit Card.
    </string>
    <string name="hotel_name" translatable="false">
        Accra City Hotel
    </string>
    <string name="title_about_hotel" translatable="false">
        About Hotel
    </string>
    <string name="about_hotel" translatable="false">
        Accra City Hotel is a city hotel that provides users
        access to all that makes Accra an exciting place
        to visit. The hotel provides fantastic facilities both for
        high quality entertainment purposes and high
        class relaxation. This is ideal for holidaymakers and
        business travellers.
    </string>
    <string name="about_hotel_short" translatable="false">
        Accra City Hotel is a city hotel that provides users
        access to all...
    </string>
    <string name="text_contact_us" translatable="false">
        If you have any issues or suggestions regarding
        the use of the application , feel free to contact
        us on +233.24.513.4112 / +233.302.98.50.13 / +233.50.130.4161
        or send a mail to zentechgh@gmail.com
    </string>
    <string name="hint_overview" translatable="false">Overview</string>
    <string name="hint_mission" translatable="false">Mission</string>
    <string name="hint_vision" translatable="false">Vision</string>
    <string name="text_overview" translatable="false">
        ZHMS seeks to avoid inconveniences,
        caused as a result of one going to Hotel or guest
        house for a room and all to realized that the
        rooms are all occupied. With  this system in place
        there is relatively much less stress and frustration.
    </string>
    <string name="text_mission" translatable="false">
        Providing a more flexible and convenient
        environment for our clients in booking
        Hotel rooms.
    </string>
    <string name="text_vision" translatable="false">
        To deliver our best to customers
        in order to satisfy their needs thereby making
        life easier for all.
    </string>
    <string name="welcome_message" translatable="false">
        Zentech HMS has a lot to offer you.
        Open the drawer on the left of the screen
        to update your profile, checks payments and
        contact us if needed and freely book a room.
        Happy Booking and enjoy!
    </string>
    <string name="dummy_username" translatable="false">Username : username</string>
    <string name="dummy_email" translatable="false">Email : username@gmail.com </string>
    <string name="edit_profile" translatable="false">Edit Profile</string>
    <string name="address" translatable="false">Address</string>
    <string name="orders" translatable="false">Orders</string>
    <string name="home" translatable="false">Home</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="sign_out" translatable="false">Sign out</string>
    <string name="open" translatable="false">Open</string>
    <string name="close" translatable="false">Close</string>
    <string name="logout_msg" translatable="false">Are you sure you want to logout?</string>
    <string name="sign_out_msg" translatable="false">Are you sure you want to Sign out?</string>
    <string name="text_update" translatable="false">UPDATE</string>
    <string name="profile" translatable="false">Profile</string>
    <string name="room_number" translatable="false">Room Number</string>
    <string name="price" translatable="false">Price</string>
    <string name="msg_forgot_password" translatable="false">Please enter your email address to reset password</string>
    <string name="btn_reset_password" translatable="false">RESET PASSWORD</string>
    <string name="btn_back" translatable="false">GO BACK</string>
    <string name="text_more_details" translatable="false">More Details</string>
    <string name="text_room_selection" translatable="false">Room selection</string>
    <string name="single_room" translatable="false">Single Room</string>
    <string name="text_breakfast" translatable="false">Breakfast:</string>
    <string name="text_lunch" translatable="false">Lunch:</string>
    <string name="text_supper" translatable="false">Supper:</string>
    <string name="text_book_now" translatable="false">Book Now</string>
    <string name="currency_symbol" translatable="false">GH¢</string>
    <string name="text_about_hotel" translatable="false">About Hotel</string>
    <string name="text_see_more_details" translatable="false">See More Rooms</string>
    <string name="text_important_info" translatable="false">Important Information</string>
    <string name="important_info_1" translatable="false">
        \u2022 Check-in is 2pm and check-out is 12am each day
    </string>
    <string name="important_info_2" translatable="false">
        \u2022 A Photo ID will be requested upon check-in and check-out
    </string>
    <string name="important_info_3" translatable="false">
        \u2022 Bed Type request should be made directly with the Hotel management
    </string>
    <string name="important_info_4" translatable="false">
        \u2022 Room prices and fees are subject to change
    </string>
    <string name="todo" translatable="false">TODO</string>
</resources>