<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/menu_about_us"
        android:orderInCategory="100"
        android:title="@string/text_about"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search"
        android:title="@string/text_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"
        tools:targetAPI="11">
    </item>

    <item
       android:id="@+id/menu_exit"
       android:title="@string/text_exit"
       android:orderInCategory="200"
       app:showAsAction="never">
   </item>

</menu>