<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ImportantInformationFragment">

    <TextView
        android:id="@+id/tv_point_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textSize="16sp"
        android:padding="@dimen/card_elevation"
        app:fontFamily="@font/nunito_semibold"
        android:text="@string/important_info_1"
        android:visibility="visible"
        android:layout_gravity="center|start" />

    <TextView
        android:id="@+id/tv_point_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textSize="16sp"
        android:padding="@dimen/card_elevation"
        app:fontFamily="@font/nunito_semibold"
        android:text="@string/important_info_2"
        android:visibility="visible"
        android:layout_gravity="center|start" />

    <TextView
        android:id="@+id/tv_point_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textSize="16sp"
        android:padding="@dimen/card_elevation"
        app:fontFamily="@font/nunito_semibold"
        android:text="@string/important_info_3"
        android:visibility="visible"
        android:layout_gravity="center|start" />


    <TextView
        android:id="@+id/tv_point_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textSize="16sp"
        android:padding="@dimen/card_elevation"
        app:fontFamily="@font/nunito_semibold"
        android:text="@string/important_info_4"
        android:visibility="visible"
        android:layout_gravity="center|start" />

</LinearLayout>