<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/hotel_image"
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:layout_height="200dp"
            android:scaleType="centerInside"
            android:background="@drawable/splash_image"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/tv_more_details"
            android:layout_below="@+id/hotel_image"
            android:layout_centerHorizontal="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="18sp"
            android:padding="@dimen/card_elevation"
            app:fontFamily="@font/nunito_extrabold"
            android:text="@string/text_more_details"
            android:visibility="visible"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/btn_more_details"
            android:layout_below="@+id/tv_more_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/card_elevation"
            android:layout_margin="5dp"
            android:background="@color/white_dim"
            android:drawableEnd="@drawable/ic_next" card_view:targetApi="lollipop" />

        <TextView
            android:id="@+id/tv_room_selection"
            android:layout_below="@+id/btn_more_details"
            android:layout_centerHorizontal="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="18sp"
            android:padding="@dimen/card_elevation"
            app:fontFamily="@font/nunito_extrabold"
            android:text="@string/text_room_selection"
            android:visibility="visible"
            android:layout_gravity="center" />

        <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            android:layout_below="@+id/tv_room_selection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            card_view:contentPadding="@dimen/card_elevation"
            card_view:cardCornerRadius="@dimen/card_elevation"
            card_view:cardElevation="@dimen/card_elevation"
            card_view:cardMaxElevation="@dimens/card_elevation">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/room_image"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/hotel_2"
                    android:scaleType="centerCrop"
                    android:contentDescription="TODO" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_room_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:padding="@dimen/card_elevation"
                    android:layout_marginStart="10dp"
                    app:fontFamily="@font/nunito_extrabold"
                    android:text="@string/single_room"/>

                <TextView
                    android:id="@+id/tv_breakfast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:drawableStart="@drawable/ic_breakfast"
                    android:drawablePadding="@dimen/spacing_small"
                    android:textSize="16sp"
                    android:padding="@dimen/card_elevation"
                    app:fontFamily="@font/nunito_semibold"
                    android:text="@string/text_breakfast"/>

                    <TextView
                        android:id="@+id/tv_lunch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:drawableStart="@drawable/ic_lunch"
                        android:drawablePadding="@dimen/spacing_small"
                        android:textSize="16sp"
                        android:padding="@dimen/card_elevation"
                        app:fontFamily="@font/nunito_semibold"
                        android:text="@string/text_lunch"/>

                    <TextView
                        android:id="@+id/tv_supper"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:drawableStart="@drawable/ic_supper"
                        android:drawablePadding="@dimen/spacing_small"
                        android:textSize="16sp"
                        android:padding="@dimen/card_elevation"
                        app:fontFamily="@font/nunito_semibold"
                        android:text="@string/text_supper"/>

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center|bottom"
                    android:visibility="gone"/>

                    <TextView
                        android:id="@+id/tv_room_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:textSize="16sp"
                        android:padding="@dimen/card_elevation"
                        app:fontFamily="@font/nunito_semibold"
                        android:text="@string/currency_symbol"/>

                <Button
                    android:id="@+id/button_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:text="@string/text_book_now"
                    android:drawableEnd="@drawable/ic_next_white"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    app:fontFamily="@font/nunito_semibold"
                    android:background="@color/colorPrimaryDark"
                    android:padding="@dimen/card_elevation"
                    android:layout_margin="5dp"/>

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/btn_see_more_rooms"
            android:layout_below="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="16sp"
            android:text="@string/text_see_more_details"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            android:background="@color/white_dim"
            android:drawableEnd="@drawable/ic_next"/>

        <TextView
            android:id="@+id/tv_about_hotel"
            android:layout_below="@+id/cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="18sp"
            android:padding="@dimen/card_elevation"
            app:fontFamily="@font/nunito_extrabold"
            android:text="@string/text_about_hotel"/>

        <Button
            android:id="@+id/btn_about_hotel"
            android:layout_below="@+id/tv_about_hotel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            android:background="@color/white_dim"
            android:drawableEnd="@drawable/ic_next"/>

        <Button
            android:id="@+id/btn_info"
            android:layout_below="@+id/tv_about_hotel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_important_info"
            android:layout_margin="5dp"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            android:background="@color/white_dim"
            android:drawableEnd="@drawable/ic_next"/>

    </RelativeLayout>

</ScrollView>